Parsing Invalid Options, proper print with other move

--- a/Gobang/Makefile
+++ b/Gobang/Makefile
@@ -2,17 +2,17 @@
 #165A MP2
 #
 
-CC	= clang++
-LFLAGS = -pthread
-CFLAGS = -g
+CXX=g++
+LFLAGS=-pthread
+CXXFLAGS=-g -std=c++11 -Wall -Werror -Wextra -lstdc++
 
 OBJECTS = Gobang.o Player.o Board.o Move.o Direction.o
 
 Gobang : $(OBJECTS)
-	$(CC) $(OBJECTS) -o Gobang
+	$(CXX) $(OBJECTS) -o Gobang
 
 %.o : %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CXX) -std=c++11 $(CXXFLAGS) -c $< -o $@
 
 run: clean Gobang
 	./Gobang -n 5
