--- a/Gobang/Gobang.vcxproj
+++ b/Gobang/Gobang.vcxproj
@@ -66,12 +66,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Direction.cpp" />
     <ClCompile Include="Gobang.cpp" />
     <ClCompile Include="Move.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.hpp" />
+    <ClInclude Include="Direction.hpp" />
     <ClInclude Include="Move.hpp" />
     <ClInclude Include="Player.hpp" />
   </ItemGroup>
