--- a/Gobang/Gobang.vcxproj.filters
+++ b/Gobang/Gobang.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Gobang.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Direction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Move.hpp">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Board.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Direction.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
