Working slow version

--- a/Gobang/Makefile
+++ b/Gobang/Makefile
@@ -3,8 +3,8 @@
 #
 
 CXX=g++
-LFLAGS=-pthread
-CXXFLAGS=-g -std=c++11 -Wall -Werror -Wextra -lstdc++
+LFLAGS=
+CXXFLAGS=-std=c++11 -Wall -Werror -Wextra -lstdc++
 
 OBJECTS = Gobang.o Player.o Board.o Move.o Direction.o
 
@@ -12,7 +12,7 @@ Gobang : $(OBJECTS)
 	$(CXX) $(OBJECTS) -o Gobang
 
 %.o : %.c
-	$(CXX) -std=c++11 $(CXXFLAGS) -c $< -o $@
+	$(CXX) -pg -std=c++11 $(CXXFLAGS) -c $< -o -pg $@
 
 run: clean Gobang
 	./Gobang -n 5
