Cleaned up for submit

--- a/Gobang/Makefile
+++ b/Gobang/Makefile
@@ -3,8 +3,7 @@
 #
 
 CXX=g++
-LFLAGS=
-CXXFLAGS=-std=c++11 -Wall -Werror -Wextra -lstdc++
+CXXFLAGS=-std=c++11 -lstdc++
 
 OBJECTS = Gobang.o Player.o Board.o Move.o Direction.o
 
@@ -12,14 +11,11 @@ Gobang : $(OBJECTS)
 	$(CXX) $(OBJECTS) -o Gobang
 
 %.o : %.c
-	$(CXX) -pg -std=c++11 $(CXXFLAGS) -c $< -o -pg $@
+	$(CXX) -std=c++11 $(CXXFLAGS) -c $< -o $@
 
 run: clean Gobang
 	./Gobang -n 5
 	rm -f Gobang *.o
-
-leak: clean Gobang
-	valgrind --leak-check=full ./Gobang
 
 clean:
 	rm -f Gobang *.o
